--- a/motaphoto/sass/base/_typography.scss
+++ b/motaphoto/sass/base/_typography.scss
@@ -62,3 +62,11 @@ h4, h5 {
 }
 
 
+.text-stroke {
+    -webkit-text-stroke: 3px white;
+    text-shadow:
+        -1px -1px 0 #000,
+         1px -1px 0 #000,
+        -1px  1px 0 #000,
+         1px  1px 0 #000; /* Fallback for browsers that do not support text-stroke */
+}
