--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -171,11 +171,6 @@ h1 {
   font-weight: 700;
   font-style: italic;
 }
-@media screen and (max-width: 768px) {
-  h1 {
-    font-size: 26px;
-  }
-}
 
 h2 {
   font-size: 24px;
@@ -210,6 +205,27 @@ h4, h5 {
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; /* Fallback for browsers that do not support text-stroke */
 }
 
+@media (max-width: 1200px) {
+  h1 {
+    font-size: calc(66px + 2vw);
+  }
+}
+@media (max-width: 900px) {
+  h1 {
+    font-size: calc(55px + 2vw);
+  }
+}
+@media (max-width: 768px) {
+  h1 {
+    font-size: calc(52px + 2vw);
+  }
+}
+/* Optional: Set a minimum font size for very small screens */
+@media (max-width: 480px) {
+  h1 {
+    font-size: calc(40px + 2vw);
+  }
+}
 /* Space Mono Fonts */
 @font-face {
   font-family: "Space-Mono", monospace;
@@ -826,33 +842,6 @@ div.contact-form-button p input:hover {
     margin-top: 30px;
   }
 }
-section#hero-header {
-  display: block;
-  position: relative;
-  width: 100%;
-  height: auto;
-  max-height: 800px;
-  margin-bottom: 50px;
-  padding: 0;
-  object-fit: contain;
-}
-section#hero-header .hero-banner {
-  display: flex;
-  justify-content: center;
-  object-fit: contain;
-}
-section#hero-header .hero-banner img {
-  width: 100%;
-  height: auto;
-  max-height: 800px;
-  object-fit: cover;
-}
-
-@media screen and (max-width: 768px) {
-  section#hero-header .hero-banner img {
-    max-height: 400px;
-  }
-}
 section#related-photos {
   height: auto;
   max-height: 40%;
@@ -1098,6 +1087,41 @@ div.photo-contact-wrapper .sub-photo-container article.preview-wrapper {
     width: 100%;
   }
 }
+section#hero-header {
+  width: 100vw;
+  height: 960px;
+  margin: 0;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+section#hero-header .hero-banner {
+  display: flex;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+section#hero-header .hero-banner h1 {
+  flex: 1;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-self: center;
+  flex-wrap: nowrap;
+}
+
 ul,
 li,
 a {
