--- a/motaphoto/sass/pages/_homepage.scss
+++ b/motaphoto/sass/pages/_homepage.scss
@@ -4,17 +4,36 @@ section#hero-header {
    margin: 0;
    position: relative;
    overflow: hidden;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 
    .hero-banner {
-        display: flex;
-         width: 100%;
-         height: 100%;
-         position: absolute;
-         top: 0;
-         left: 0;
-         z-index: 1;
-         background-size: cover;
-         background-position: center;
-         background-repeat: no-repeat;
+      display: flex;
+      flex: 1;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+         h1 {
+               flex: 1;
+               width: 100%;
+               margin: 0;
+               padding: 0;
+               display: flex;
+               position: relative;
+               justify-content: center;
+               align-self: center;
+               flex-wrap: nowrap;
+               
+            }
+
    }
+
+   
 }
