--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -1136,13 +1136,20 @@ a:hover, a:focus {
 }
 
 .site-main {
-  width: 100%;
-  margin: auto;
+  width: 100vw;
+  margin: 0;
   padding: 0;
 }
 @media-screen and (min-width: 1400px) {
   .site-main {
     margin: 0 2%;
   }
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=custom.css.map */
