--- a/motaphoto/sass/custom.scss
+++ b/motaphoto/sass/custom.scss
@@ -32,10 +32,17 @@ a {
 }
 
 .site-main {
-  width: 100%;
-  margin: auto;
+  width: 100vw;
+  margin: 0;
   padding: 0;
   @media-screen and (min-width: 1400px) {
     margin: 0 2%;
   }
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
