--- a/motaphoto/sass/layout/_photo-gallery.scss
+++ b/motaphoto/sass/layout/_photo-gallery.scss
@@ -1,24 +1,28 @@
 div.gallery-photos__container {
     display: flex;
-    justify-content: center; /* Center items horizontally */
-    align-items: center; /* Center items vertically */
-    max-width: calc(100% - 40px);
+    justify-content: center;
+    align-items: center; 
+    width: 100%;
     height: 80%;
     gap: 20px;
     flex: 1;
-    flex-wrap: wrap; /* Prevent items from wrapping */
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
   
     article.gallery-photo {
         flex: 0 1 calc(50% - 20px); /* Flex basis of 50% minus gap, allowing it to grow and shrink */
-        width: 48vw;
-        height: 500px; /* Set a max-height to control the size of the photos */
+        width: 50vw;
+        height: 500px; 
         overflow: hidden;
   
         img {
-            width: 100%; /* Full width of the article */
-            height: 100% ; /* Adjusted to fill the article height */
+            width: 100%;
+            height: 100%;
             object-fit: cover; /* Cover the area without losing aspect ratio */
             background-position: center;
+            margin: 0;
+            padding: 0;
         }
     }
   }
