added select to typography

--- a/motaphoto/sass/base/_typography.scss
+++ b/motaphoto/sass/base/_typography.scss
@@ -60,6 +60,15 @@ h4, h5 {
     font-style: normal;
 }
 
+select {
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 18px;
+
+}
+
 
 .text-stroke {
     -webkit-text-stroke: 3px white;
