--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -200,6 +200,14 @@ h4, h5 {
   font-style: normal;
 }
 
+select {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 18px;
+}
+
 .text-stroke {
   -webkit-text-stroke: 3px white;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; /* Fallback for browsers that do not support text-stroke */
@@ -843,25 +851,29 @@ div.contact-form-button p input:hover {
 }
 div.gallery-photos__container {
   display: flex;
-  justify-content: center; /* Center items horizontally */
-  align-items: center; /* Center items vertically */
-  max-width: calc(100% - 40px);
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   height: 80%;
   gap: 20px;
   flex: 1;
-  flex-wrap: wrap; /* Prevent items from wrapping */
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
 }
 div.gallery-photos__container article.gallery-photo {
   flex: 0 1 calc(50% - 20px); /* Flex basis of 50% minus gap, allowing it to grow and shrink */
-  width: 48vw;
-  height: 500px; /* Set a max-height to control the size of the photos */
+  width: 50vw;
+  height: 500px;
   overflow: hidden;
 }
 div.gallery-photos__container article.gallery-photo img {
-  width: 100%; /* Full width of the article */
-  height: 100%; /* Adjusted to fill the article height */
+  width: 100%;
+  height: 100%;
   object-fit: cover; /* Cover the area without losing aspect ratio */
   background-position: center;
+  margin: 0;
+  padding: 0;
 }
 
 body,
@@ -1118,9 +1130,41 @@ section.photo-gallery {
   flex: 1;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   position: relative;
   align-items: center;
-  flex-wrap: wrap;
+}
+section.photo-gallery > .photo-filters {
+  margin: 40px auto;
+  width: 98%;
+  height: 100px;
+  flex-direction: row;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+section.photo-gallery > .photo-filters div {
+  display: flex;
+  width: 48%;
+  height: 50%;
+}
+
+.photo-filters__container {
+  justify-content: space-between;
+}
+
+div.photo-filters > div.year-sortby__container {
+  justify-content: flex-end;
+}
+
+.category-menu,
+.format-menu,
+.year-sortby {
+  border-radius: 5px;
+  width: calc(40% - 20px);
+  gap: 20px;
 }
 
 ul,
