--- a/motaphoto/sass/components/_buttons.scss
+++ b/motaphoto/sass/components/_buttons.scss
@@ -3,12 +3,14 @@
 
 
 .btn-contact,
-button.btn-cta {
+button.btn-cta,
+button#btn-load-more {
     width: 35%;
     height: 50px;
     background-color: map-get($colors, "btn-contact-bg-color");
     border: none;
     transition: 0.4s ease scale(0);
+    text-transform: none;
 
     a {
         color: black;
@@ -18,6 +20,8 @@ button.btn-cta {
     &:hover {
         transform: scale(1.1);
         background-color: black;
+        color: white;
+        font-weight: 700;
         
         a {
             color: white;
