--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -200,7 +200,8 @@ h4, h5 {
   font-style: normal;
 }
 
-select {
+select,
+option {
   font-family: "Poppins";
   font-weight: 500;
   font-style: normal;
