--- a/motaphoto/sass/base/_typography.scss
+++ b/motaphoto/sass/base/_typography.scss
@@ -60,7 +60,8 @@ h4, h5 {
     font-style: normal;
 }
 
-select {
+select,
+option {
     font-family: 'Poppins';
     font-weight: 500;
     font-style: normal;
