--- a/motaphoto/sass/base/_mixins.scss
+++ b/motaphoto/sass/base/_mixins.scss
@@ -4,4 +4,25 @@
     align-items: flex-end;
   }
 
+
+  // Define common flex centering
+  @mixin flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  // Common flex container
+  @mixin flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  
+  // Common full-size flex item
+  @mixin full-size-flex-item {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
   
