header doc. for main scss files

--- a/motaphoto/sass/components/components.scss
+++ b/motaphoto/sass/components/components.scss
@@ -1,5 +1,16 @@
+/**
+ * Componenets Styles
+ *
+ * @package Motaphoto
+ */
+
+ // IMPORT COMPONENTS ELEMENTS
+
 // IMPORT NAV
 @import 'nav';
 
 // IMPORT BUTTONS
 @import 'buttons';
+
+// IMPORT FILTER MENUS FOR DROPDOWN FILTERS
+@import 'filter-menus';
