--- a/motaphoto/sass/layout/layout.scss
+++ b/motaphoto/sass/layout/layout.scss
@@ -1,4 +1,15 @@
+/**
+ * Layout Styles
+ *
+ * @package Motaphoto
+ */
+
+
+// IMPORT LAYOUTS
 @import 'header';
-@import 'contact';
+
 @import 'footer';
+
+@import 'contact';
+
 @import 'photo-gallery';
