--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -1,3 +1,19 @@
+/**
+ * Custom Styles
+ *
+ * This file is for better separation of custom styles.
+ * And is compiled into /assets/css/custom.css
+ * Where it is enqueued as a custom stylesheet
+
+ * You can add your custom styles here.
+ *
+ * @package Motaphoto
+ */
+/**
+ * Base Styles
+ *
+ * @package Motaphoto
+ */
 body,
 html {
   background-color: white;
@@ -444,6 +460,11 @@ img {
   resize: none;
 }
 
+/**
+ * Componenets Styles
+ *
+ * @package Motaphoto
+ */
 /* Navigation styling for the header and footer navbars and menus */
 /* Navigation styling */
 .main-navigation {
@@ -468,6 +489,20 @@ img {
 .main-navigation ul#primary-menu li a {
   padding: 10px;
   display: block;
+}
+
+ul,
+li,
+a {
+  list-style: none;
+  text-decoration: none;
+  font-family: "Space-Mono", monospace;
+  padding: 0;
+  margin: 0;
+}
+
+a:hover, a:focus {
+  font-weight: 700;
 }
 
 /* Responsive styling */
@@ -560,6 +595,11 @@ div.contact-form-button p input:hover {
   border: 1.3px solid #215AFF;
 }
 
+/**
+ * Layout Styles
+ *
+ * @package Motaphoto
+ */
 /* General styling for the header */
 #masthead {
   height: 80px;
@@ -728,6 +768,48 @@ div.contact-form-button p input:hover {
     transform: rotate(-45deg) translate(5px, -5px);
   }
 }
+/* Footer menu styling */
+.footer-nav {
+  border-top: 1px solid black;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 80px;
+}
+.footer-nav ul#footer-menu {
+  display: flex;
+  flex-shrink: 1;
+  margin: auto;
+}
+.footer-nav ul#footer-menu li {
+  margin: 0 15px;
+  min-width: fit-content;
+}
+.footer-nav ul#footer-menu li a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  display: block;
+}
+.footer-nav ul#footer-menu li a:hover, .footer-nav ul#footer-menu li a:focus {
+  font-weight: 700;
+}
+
+/* Responsive styling */
+@media screen and (max-width: 768px) {
+  .footer-nav {
+    height: auto;
+    border-top: 1px solid black;
+  }
+  .footer-nav ul#footer-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-height: 100px;
+    margin-top: 30px;
+  }
+}
 #contact-modal {
   display: none;
   position: fixed;
@@ -831,48 +913,6 @@ div.contact-form-button p input:hover {
   font-size: 14px;
 }
 
-/* Footer menu styling */
-.footer-nav {
-  border-top: 1px solid black;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  height: 80px;
-}
-.footer-nav ul#footer-menu {
-  display: flex;
-  flex-shrink: 1;
-  margin: auto;
-}
-.footer-nav ul#footer-menu li {
-  margin: 0 15px;
-  min-width: fit-content;
-}
-.footer-nav ul#footer-menu li a {
-  text-decoration: none;
-  color: black;
-  padding: 10px;
-  display: block;
-}
-.footer-nav ul#footer-menu li a:hover, .footer-nav ul#footer-menu li a:focus {
-  font-weight: 700;
-}
-
-/* Responsive styling */
-@media screen and (max-width: 768px) {
-  .footer-nav {
-    height: auto;
-    border-top: 1px solid black;
-  }
-  .footer-nav ul#footer-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-height: 100px;
-    margin-top: 30px;
-  }
-}
 div.gallery-photos__container {
   display: flex;
   justify-content: center;
@@ -900,6 +940,11 @@ div.gallery-photos__container article.gallery-photo img {
   padding: 0;
 }
 
+/**
+ * Layout Styles
+ *
+ * @package Motaphoto
+ */
 body,
 html {
   background-color: white;
@@ -1357,20 +1402,6 @@ section.photo-catalogue > .photo-filters .sorting-options {
 
 .rotate {
   transform: rotate(180deg);
-}
-
-ul,
-li,
-a {
-  list-style: none;
-  text-decoration: none;
-  font-family: "Space-Mono", monospace;
-  padding: 0;
-  margin: 0;
-}
-
-a:hover, a:focus {
-  font-weight: 700;
 }
 
 .site-main {
