--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -1,3 +1,19 @@
+/**
+ * Custom Styles
+ *
+ * This file is for better separation of custom styles.
+ * And is compiled into /assets/css/custom.css
+ * Where it is enqueued as a custom stylesheet
+
+ * You can add your custom styles here.
+ *
+ * @package Motaphoto
+ */
+/**
+ * Base Styles
+ *
+ * @package Motaphoto
+ */
 body,
 html {
   background-color: white;
@@ -445,6 +461,11 @@ img {
   resize: none;
 }
 
+/**
+ * Componenets Styles
+ *
+ * @package Motaphoto
+ */
 /* Navigation styling for the header and footer navbars and menus */
 /* Navigation styling */
 .main-navigation {
@@ -469,6 +490,20 @@ img {
 .main-navigation ul#primary-menu li a {
   padding: 10px;
   display: block;
+}
+
+ul,
+li,
+a {
+  list-style: none;
+  text-decoration: none;
+  font-family: "Space-Mono", monospace;
+  padding: 0;
+  margin: 0;
+}
+
+a:hover, a:focus {
+  font-weight: 700;
 }
 
 /* Responsive styling */
@@ -544,6 +579,11 @@ div.contact-form-button p input:hover {
   transform: scale(1.2);
 }
 
+/**
+ * Layout Styles
+ *
+ * @package Motaphoto
+ */
 /* General styling for the header */
 #masthead {
   height: 80px;
@@ -712,6 +752,48 @@ div.contact-form-button p input:hover {
     transform: rotate(-45deg) translate(5px, -5px);
   }
 }
+/* Footer menu styling */
+.footer-nav {
+  border-top: 1px solid black;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 80px;
+}
+.footer-nav ul#footer-menu {
+  display: flex;
+  flex-shrink: 1;
+  margin: auto;
+}
+.footer-nav ul#footer-menu li {
+  margin: 0 15px;
+  min-width: fit-content;
+}
+.footer-nav ul#footer-menu li a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  display: block;
+}
+.footer-nav ul#footer-menu li a:hover, .footer-nav ul#footer-menu li a:focus {
+  font-weight: 700;
+}
+
+/* Responsive styling */
+@media screen and (max-width: 768px) {
+  .footer-nav {
+    height: auto;
+    border-top: 1px solid black;
+  }
+  .footer-nav ul#footer-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-height: 100px;
+    margin-top: 30px;
+  }
+}
 #contact-modal {
   display: none;
   position: fixed;
@@ -815,48 +897,6 @@ div.contact-form-button p input:hover {
   font-size: 14px;
 }
 
-/* Footer menu styling */
-.footer-nav {
-  border-top: 1px solid black;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  height: 80px;
-}
-.footer-nav ul#footer-menu {
-  display: flex;
-  flex-shrink: 1;
-  margin: auto;
-}
-.footer-nav ul#footer-menu li {
-  margin: 0 15px;
-  min-width: fit-content;
-}
-.footer-nav ul#footer-menu li a {
-  text-decoration: none;
-  color: black;
-  padding: 10px;
-  display: block;
-}
-.footer-nav ul#footer-menu li a:hover, .footer-nav ul#footer-menu li a:focus {
-  font-weight: 700;
-}
-
-/* Responsive styling */
-@media screen and (max-width: 768px) {
-  .footer-nav {
-    height: auto;
-    border-top: 1px solid black;
-  }
-  .footer-nav ul#footer-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-height: 100px;
-    margin-top: 30px;
-  }
-}
 div.gallery-photos__container {
   display: flex;
   justify-content: center;
@@ -884,6 +924,11 @@ div.gallery-photos__container article.gallery-photo img {
   padding: 0;
 }
 
+/**
+ * Layout Styles
+ *
+ * @package Motaphoto
+ */
 body,
 html {
   background-color: white;
@@ -1113,28 +1158,22 @@ section#hero-header {
   align-items: center;
 }
 section#hero-header .hero-banner {
-  display: flex;
   flex: 1;
   width: 100%;
   height: 100%;
   position: relative;
-  top: 0;
-  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 1;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 section#hero-header .hero-banner h1 {
-  flex: 1;
-  width: 100%;
   margin: 0;
   padding: 0;
-  display: flex;
-  position: relative;
-  justify-content: center;
   align-self: center;
-  flex-wrap: nowrap;
 }
 
 section.photo-catalogue {
@@ -1153,7 +1192,6 @@ section.photo-catalogue > .photo-filters {
   margin: 40px auto;
   width: 98%;
   height: 100px;
-  flex-direction: row;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
@@ -1166,7 +1204,8 @@ section.photo-catalogue > .photo-filters div {
   height: 50%;
 }
 
-.photo-filters__container {
+.photo-filters__container,
+div.photo-filters > div.year-sortby__container {
   justify-content: space-between;
 }
 
@@ -1190,20 +1229,26 @@ div.photo-filters > div.year-sortby__container {
   height: 100px;
 }
 
-ul,
-li,
-a {
-  list-style: none;
-  text-decoration: none;
-  font-family: "Space-Mono", monospace;
-  padding: 0;
-  margin: 0;
+@media screen and (max-width: 768px) {
+  section#hero-header {
+    height: 70vh;
+  }
+  section.photo-catalogue {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
 }
-
-a:hover, a:focus {
-  font-weight: 700;
+@media screen and (max-width: 900px) {
+  section#hero-header {
+    height: 85vh;
+  }
+  section.photo-catalogue {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
 }
-
 .site-main {
   width: 100vw;
   margin: 0;
