FIXED FILTER/SORTING STYLES & button / list item hover/active/selected colors, fonts, and resets.

--- a/motaphoto/sass/base/_colors.scss
+++ b/motaphoto/sass/base/_colors.scss
@@ -8,3 +8,9 @@ $colors: (
   "btn-contact-bg-color": #D8D8D8,
   "tertiary-light-grey": #E5E5E5
 );
+
+
+$dropdown-menu--hover__bg: #FFD6D6;
+$dropdown-menu--active__bg: #FFD6D6;
+$dropdown-menu--selected__bg: #E00000;
+$dropdown-menu--selected__font-color: #FFFFFF;
