--- a/motaphoto/sass/base/_fonts.scss
+++ b/motaphoto/sass/base/_fonts.scss
@@ -60,7 +60,7 @@
         url('../../assets/fonts/Poppins/poppins-black-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-black-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-black-mota-photo-font.svg') format('svg');
-    font-weight: normal;
+    font-weight: 900;
     font-style: normal;
 }
 
@@ -71,7 +71,7 @@
          url('../../assets/fonts/Poppins/poppins-blackitalic-mota-photo-font.woff') format('woff'),
          url('../../assets/fonts/Poppins/poppins-blackitalic-mota-photo-font.ttf') format('truetype'),
          url('../../assets/fonts/Poppins/poppins-blackitalic-mota-photo-font.svg#poppinsblack_italic') format('svg');
-    font-weight: normal;
+    font-weight: 900;
     font-style: italic;
 
 }
@@ -84,7 +84,7 @@
         url('../../assets/fonts/Poppins/poppins-bold-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-bold-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-bold-mota-photo-font.svg#poppinsbold') format('svg');
-    font-weight: bold;
+    font-weight: 700;
     font-style: normal;
 
 }
@@ -97,7 +97,7 @@
         url('../../assets/fonts/Poppins/poppins-bolditalic-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-bolditalic-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-bolditalic-mota-photo-font.svg') format('svg');
-    font-weight: bold;
+    font-weight: 700;
     font-style: italic;
 
 }
@@ -110,7 +110,7 @@
         url('../../assets/fonts/Poppins/poppins-extrabold-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-extrabold-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-extrabold-mota-photo-font.svg') format('svg');
-    font-weight: bold;
+    font-weight: 800;
     font-style: normal;
 
 }
@@ -123,7 +123,7 @@
         url('../../assets/fonts/Poppins/poppins-extrabolditalic-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-extrabolditalic-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-extrabolditalic-mota-photo-font.svg') format('svg');
-    font-weight: bold;
+    font-weight: 800;
     font-style: italic;
 
 }
@@ -136,7 +136,7 @@
         url('../../assets/fonts/Poppins/poppins-extralight-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-extralight-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-extralight-mota-photo-font.svg#poppinsextralight') format('svg');
-    font-weight: normal;
+    font-weight: 200;
     font-style: normal;
 
 }
@@ -149,7 +149,7 @@
          url('../../assets/fonts/Poppins/poppins-extralightitalic-mota-photo-font.woff') format('woff'),
          url('../../assets/fonts/Poppins/poppins-extralightitalic-mota-photo-font.ttf') format('truetype'),
          url('../../assets/fonts/Poppins/poppins-extralightitalic-mota-photo-font.ttf') format('svg');
-    font-weight: normal;
+    font-weight: 200;
     font-style: italic;
 
 }
@@ -161,7 +161,7 @@
         url('../../assets/fonts/Poppins/poppins-italic-mota-photo-font.woff') format('woff'),
          url('../../assets/fonts/Poppins/poppins-italic-mota-photo-font.ttf') format('truetype'),
          url('../../assets/fonts/Poppins/poppins-italic-mota-photo-font.svg') format('svg');
-    font-weight: normal;
+    font-weight: 400;
     font-style: italic;
 
 }
@@ -175,7 +175,7 @@
         url('../../assets/fonts/Poppins/poppins-light-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-light-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-light-mota-photo-font.svg') format('svg');
-    font-weight: normal;
+    font-weight: 300;
     font-style: normal;
 
 }
@@ -188,7 +188,7 @@
         url('../../assets/fonts/Poppins/poppins-lightitalic-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-lightitalic-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-lightitalic-mota-photo-font.svg#poppinslight_italic') format('svg');
-    font-weight: normal;
+    font-weight: 300;
     font-style: italic;
 
 }
@@ -202,7 +202,7 @@
         url('../../assets/fonts/Poppins/poppins-medium-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-medium-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-medium-mota-photo-font.svg#poppinsmedium') format('svg');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
 
 }
@@ -215,7 +215,7 @@
         url('../../assets/fonts/Poppins/poppins-mediumitalic-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-mediumitalic-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-mediumitalic-mota-photo-font.svg#poppinsmedium_italic') format('svg');
-    font-weight: normal;
+    font-weight: 400;
     font-style: italic;
 
 }
@@ -228,7 +228,7 @@
         url('../../assets/fonts/Poppins/poppins-regular-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-regular-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-regular-mota-photo-font.svg') format('svg');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
 
 }
@@ -241,7 +241,7 @@
         url('../../assets/fonts/Poppins/poppins-semibold-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-semibold-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-semibold-mota-photo-font.svg') format('svg');
-    font-weight: bold;
+    font-weight: 500;
     font-style: normal;
 
 }
@@ -254,7 +254,7 @@
         url('../../assets/fonts/Poppins/poppins-semibolditalic-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-semibolditalic-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-semibolditalic-mota-photo-font.svg#poppinssemibold_italic') format('svg');
-    font-weight: bold;
+    font-weight: 500;
     font-style: italic;
 
 }
@@ -267,7 +267,7 @@
         url('../../assets/fonts/Poppins/poppins-thin-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-thin-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-thin-mota-photo-font.svg#poppinsthin') format('svg');
-    font-weight: normal;
+    font-weight: 300;
     font-style: normal;
 
 }
@@ -280,7 +280,7 @@
         url('../../assets/fonts/Poppins/poppins-thinitalic-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-thinitalic-mota-photo-font.ttf') format('truetype'),
         url('../../assets/fonts/Poppins/poppins-thinitalic-mota-photo-font.svg') format('svg');
-    font-weight: normal;
+    font-weight: 300;
     font-style: italic;
 
 }
