--- a/motaphoto/sass/base/_typography.scss
+++ b/motaphoto/sass/base/_typography.scss
@@ -60,10 +60,9 @@ h4, h5 {
     font-style: normal;
 }
 
-select,
-option {
+.dropbtn {
     font-family: 'Poppins';
-    font-weight: 500;
+    font-weight: 400;
     font-style: normal;
     font-size: 14px;
     line-height: 18px;
