--- a/motaphoto/sass/components/_buttons.scss
+++ b/motaphoto/sass/components/_buttons.scss
@@ -73,3 +73,23 @@ div.contact-form-button {
         }
     }
 }
+
+// Button for Filters/Sorting Dropdown
+
+.dropbtn {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: left;
+    padding-left: 10px;
+    min-height: 43px;
+}
+
+.dropbtn.active,
+.dropbtn:hover,
+.dropdown-content.open + .dropbtn {
+    border: 1.3px solid #215AFF;
+}
+
