separated filter-menu styles into a sass '/components' file

--- a/motaphoto/sass/pages/_homepage.scss
+++ b/motaphoto/sass/pages/_homepage.scss
@@ -1,14 +1,7 @@
-<<<<<<< HEAD
-//Import colors
-
-@import '../base/colors';
-
-// Hero Header Banner
-=======
 
 @import "../base/_mixins";
+@import "../base/colors";
 
->>>>>>> 46df095 (new mixins for homepage.scss to reduce redundancies and responsive design)
 section#hero-header {
    width: 100vw;
    height: 960px;
@@ -34,7 +27,6 @@ section#hero-header {
        align-self: center;
      }
    }
-<<<<<<< HEAD
 
    
 }
@@ -77,94 +69,6 @@ section#hero-header {
    }
 }
 
-// Photo Catalogue Section
-section.photo-catalogue {
-=======
- }
- 
- section.photo-catalogue {
->>>>>>> 46df095 (new mixins for homepage.scss to reduce redundancies and responsive design)
-   height: auto;
-   margin: 0 auto 50px;
-   width: calc(80vw - 20px);
-   padding: 20px;
-   flex: 1;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-between;
-   position: relative;
-   align-items: center;
-<<<<<<< HEAD
-   
-   >.photo-filters {
-      margin: 40px auto;
-      width: 98%;
-      height: 100px;
-      flex-direction: row;
-      display: flex;
-      flex-wrap: nowrap;
-      justify-content: space-between;
-      align-items: center;
-      gap: 20px;
-
-      .filters-options,
-      .sorting-options {
-         display: flex;
-         width: 49%;
-         height: 100%;
-      }
-   }
-}
-
-.filters-options {
-   justify-content: space-between;
-   align-items: center;
-   width: 100%;
-   height: 100%;
-   gap: 20px;
-
-   >.category-menu {
-      justify-content: flex-start;
-
-      button {
-         width: 100%;
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
-      }
-   }
-
-   >.format-menu {
-      justify-content: flex-end;
-      align-items: flex-end;
-
-      button {
-         width: 100%;
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
-      }
-   }
-}
-
-.sorting-options {
-   justify-content: flex-end;
-   align-items: center;
-   width: 100%;
-   height: 100%;
-
-   >.sorting-menu {
-      justify-content: flex-end;
-      align-items: flex-end;
-
-      button {
-         width: 100%;
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
-      }
-   }
-}
 
 .load-more {
    display: flex;
@@ -174,151 +78,3 @@ section.photo-catalogue {
    width: 50%;
    height: 100px;
 }
-
-// FILTER AND SORTING STYLES
-
-.category-menu,
-.format-menu,
-.sorting-menu{
-   border-radius: 5px;
-   width: calc(40% - 20px);
-
-   :active {
-      border: 1.3px solid #215AFF;
-   }
-}
-
-
-.dropdown {
-   position: relative;
-
-   &-content {
-      display: none;
-      position: absolute;
-      top: 100%;
-      right: 0;
-      background-color: white;
-      width: 100%;
-      z-index: 100;
-      height: auto;
-      text-transform: none;
-      cursor: pointer;
-      border: 1px solid black;
-  
-      ul {
-          margin: 0;
-          padding: 0;
-
-         :hover {
-            background-color: #FFD6D6;
-        }
-
-        :active {
-          background-color: #FE5858;
-        }
-      }
-  
-      li {
-          padding: 8px 12px;
-          background-color: white;
-      }
-  
-      .selected {
-          background-color: #E00000;
-          color: white;
-      }
-  
-      &.open {
-          display: block;
-      }
-  
-      .hidden-label {
-          font-size: 20px;
-          color: transparent;
-          cursor: pointer;
-      }
-   }
-
-   &-toggle {
-       display: flex;
-       justify-content: space-between;
-       align-items: center;
-       background-color: white;
-       color: black;
-       padding: 10px;
-       cursor: pointer;
-      
-       :active {
-         border: 1.3px solid #215AFF;
-       }
-   }
-}
-
-.rotate {
-   transform: rotate(180deg);
-}
-=======
- 
-   > .photo-filters {
-     margin: 40px auto;
-     width: 98%;
-     height: 100px;
-     @include flex-container;
-     justify-content: space-between;
-     align-items: center;
-     gap: 20px;
- 
-     div {
-       display: flex;
-       width: 48%;
-       height: 50%;
-     }
-   }
- }
- 
- .photo-filters__container,
- div.photo-filters > div.year-sortby__container {
-   justify-content: space-between;
- }
- 
- div.photo-filters > div.year-sortby__container {
-   justify-content: flex-end;
- }
- 
- .category-menu,
- .format-menu,
- .year-sortby {
-   border-radius: 5px;
-   width: calc(40% - 20px);
- }
- 
- .load-more {
-   @include flex-center;
-   margin: 50px auto;
-   width: 50%;
-   height: 100px;
- }
- 
- @media screen and (max-width: 768px) {
-   section#hero-header {
-      height: 70vh;
-   }
-
-   section.photo-catalogue {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-   }
- }
-
- @media screen and (max-width: 900px) {
-   section#hero-header {
-      height: 85vh;
-   }
-   section.photo-catalogue {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-   }
- }
->>>>>>> 46df095 (new mixins for homepage.scss to reduce redundancies and responsive design)
