--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -249,6 +249,25 @@ h4, h5 {
     font-size: calc(40px + 2vw);
   }
 }
+span.photo_category {
+  font-family: "Space-Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: white;
+  line-height: 21px;
+}
+
+span.photo_reference {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
+  color: white;
+}
+
 /* Space Mono Fonts */
 @font-face {
   font-family: "Space-Mono", monospace;
@@ -1075,14 +1094,61 @@ div.gallery-photos__container article.gallery-photo {
   width: 50vw;
   height: 500px;
   overflow: hidden;
+  position: relative;
 }
-div.gallery-photos__container article.gallery-photo img {
+div.gallery-photos__container article.gallery-photo a.photo__link {
+  cursor: pointer;
+  display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Cover the area without losing aspect ratio */
-  background-position: center;
-  margin: 0;
-  padding: 0;
+}
+div.gallery-photos__container article.gallery-photo a.photo__link div.photo-container {
+  width: 100%;
+  height: 100%;
+}
+div.gallery-photos__container article.gallery-photo a.photo__link div.photo-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s ease-in-out;
+}
+div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .icon-fullscreen {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .icon-eye {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .photo_reference {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .photo_category {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+div.gallery-photos__container article.gallery-photo a.photo__link:hover div.photo-overlay {
+  display: flex;
+  opacity: 1;
 }
 
 /**
